<resources>
    <string name="app_name">PCR Tool</string>

    <string name="date_m_d">%s 月 %s 日</string>
    <string name="character_detail">%s   %sCM   %sKG   %d</string>
    <string name="character_heigth">%sCM</string>
    <string name="character_weigth">%sKG</string>
    <string name="blood">%s 型</string>
    <string name="unique_equip_lv">等级 %d</string>
    <string name="quest_name">%s-%s</string>
    <string name="percent">%d%%</string>
    <string name="equip_count_dot">%s …x%d</string>
    <string name="equip_count">%s x%d</string>
    <string name="select_pic_count">已选择 %d</string>
    <string name="close_app">应用将在 %d 秒后关闭!</string>
    <string name="empty"> </string>
    <!-- 角色 -->
    <string name="rank">RANK</string>
    <string name="title_quest">？？？</string>
    <string name="age">年龄</string>
    <string name="title_height">身高</string>
    <string name="title_weight">体重</string>
    <string name="title_birth">生日</string>
    <string name="title_blood">血型</string>
    <string name="title_race">种族</string>
    <string name="title_guild">公会</string>
    <string name="title_fav">兴趣</string>
    <string name="cv">CV</string>
    <string name="title_self">介绍</string>
    <string name="title_position">位置</string>
    <string name="skill_action">技能效果</string>
    <string name="skill_loop">技能循环</string>
    <string name="before_loop">入场动作</string>
    <string name="looping">循环动作</string>
    <string name="equip_details">道具详情</string>
    <string name="title_comments">交流</string>
    <string name="title_room_comments">小屋交流</string>
    <string name="title_material">所需装备：%d</string>
    <string name="title_looping_sp">特殊循环</string>
    <string name="title_all_attr">- 人物属性 -</string>
    <string name="title_story_attr">- 剧情属性 -</string>
    <!--    -->
    <string name="back">返回</string>
    <string name="other">其它</string>
    <string name="setting">设置</string>
    <string name="search">搜索</string>
    <string name="move">移动</string>
    <string name="cancel">取消</string>
    <string name="function">功能</string>
    <string name="data_null_character">未找到角色信息~</string>
    <string name="data_null_equip">未找到装备信息~</string>
    <string name="sorry_ue">优衣，对不起~ </string>

    <!-- 设置页面   -->
    <string name="redownload_db">强制更新</string>
    <string name="redownload_db_summary">重新下载最新数据</string>
    <string name="data">数据版本：</string>
    <string name="app_sourcce">项目地址</string>
    <string name="thanks">感谢</string>
    <string name="data_from">干炸里脊资源</string>
    <string name="data_from_hint">数据和图片来源</string>
    <string name="shizuru_note">静流笔记</string>
    <string name="dev_tip">感谢大佬的开源项目</string>
    <string name="auto_update_app">自动更新应用</string>
    <string name="off_auto_app">已取消自动更新</string>
    <string name="on_auto_app">打开应用时，自动检查更新应用</string>
    <string name="db_cn">国服</string>
    <string name="db_tw">台服</string>
    <string name="db_jp">日服</string>
    <string name="db_cn_value">1</string>
    <string name="db_jp_value">2</string>
    <string name="egg_text">我啊，很幸福哦</string>
    <string name="egg_summary">…还…还是被发现了</string>
    <string name="game_version">切换版本</string>
    <string name="game_version_summary">点击切换数据版本</string>
    <string name="change_success">更新完成</string>
    <string name="change_success_tip">数据已更新，请点击关闭应用</string>
    <string name="to_download">是否重新下载最新数据？</string>
    <string name="pcrdfans_com">来源 pcrdfans.com</string>
    <string name="url_pcrdfans_com">https://pcrdfans.com</string>
    <string name="share_app">分享应用</string>
    <string name="share_app_sm">如果觉得不错，就让更多人知道吧~</string>
    <string name="clean_database">删除历史数据文件</string>
    <string name="now_db_type">当前版本：</string>
    <string name="backup_mode">（备份数据）</string>
    <string name="notice">更新通知</string>
    <string name="app_version">应用版本：</string>
    <string name="app_version_summary">查看全部更新通知</string>
    <string name="need_update">发现新版本，点击查看</string>
    <string name="not_update">已是最新版本</string>

    <!--筛选  -->
    <string name="filter_sort">筛选排序</string>
    <string name="filter">筛选</string>
    <string name="title_sort">排序类型</string>
    <string name="title_tip">信息提示</string>
    <string name="position_3">后卫</string>
    <string name="pos_3">后</string>
    <string name="position_2">中卫</string>
    <string name="pos_2">中</string>
    <string name="position_1">前卫</string>
    <string name="pos_1">前</string>
    <string name="atk_type">攻击类型</string>
    <string name="physical">物理攻击</string>
    <string name="magic">魔法攻击</string>
    <string name="tab_all">全部</string>
    <string name="tab_love">收藏</string>
    <string name="sort_date">登场日期</string>
    <string name="sort_type">排序方式</string>
    <string name="sort_desc">降序</string>
    <string name="sort_asc">升序</string>
    <string name="equip_type">装备类型</string>
    <string name="title_rarity">角色星级</string>
    <string name="six_unlock">六星</string>
    <string name="name">名字</string>
    <string name="game_name">角色</string>

    <!--  工具  -->
    <string name="tool_leader">排行</string>
    <string name="tool_calendar">日历</string>
    <string name="tool_calendar_title">日历</string>
    <string name="tool_pvp">竞技场</string>
    <string name="tool_pvp_liked">收藏</string>
    <string name="liked_count">已收藏： %d </string>
    <string name="character">角色</string>
    <string name="pvp_search">查询</string>
    <string name="pvp_float">悬浮窗</string>
    <string name="pvp_no_data">未查询到进攻队伍信息~</string>
    <string name="tool_gacha">卡池</string>
    <string name="tool_event">活动</string>
    <string name="pre">✦ </string>
    <string name="drop_info">- 掉落信息 -</string>
    <string name="test">testtesttestesttesttestesttesttestesttesttestesttesttestesttesttes</string>
    <string name="download_pic">下载当前图片</string>
    <string name="tool_news">公告</string>
    <string name="loading">加载中…</string>
    <string name="loading_news">正在获取最新数据…</string>
    <string name="stared">已收藏</string>
    <string name="app_download_url">https://www.coolapk.com/apk/273453</string>
    <string name="rank_compare">Rank对比</string>
    <string name="current">当前</string>
    <string name="compare">对比</string>
    <string name="all">综合</string>
    <string name="jjc">竞技场</string>
    <string name="clan">公会战</string>
    <string name="tower">露娜塔</string>
    <string name="leader_source">来源 AppMedia</string>
    <string name="leader_source_url">https://appmedia.jp/priconne-redive/1642761#b</string>
    <string name="result">差值</string>
    <string name="rerduce_1">-</string>
    <string name="equal">=</string>
    <string name="rank_pre">R%d</string>
    <string name="view_pic">角色图片</string>
    <string name="back_today">回到今天</string>
    <string name="unselect_pic">未选择图片</string>
    <string name="back_top">回到顶部</string>
    <string name="team_atk">进攻方</string>
    <string name="team_def">防守方</string>
    <string name="no_liked_data">无收藏信息~</string>
    <string name="share">分享</string>
    <string name="open_browser">浏览器中打开</string>
    <string name="min">最小化</string>
    <string name="from">From %s</string>
    <string name="customize">自定义</string>
    <string name="add">添加</string>
    <string name="pvp_search_jp">查询台服竞技场数据</string>
    <string name="pvp_search_summary">竞技场查询返回台服竞技场信息</string>
    <string name="tool_equip">装备</string>
    <string name="character_name">角色名</string>
    <string name="equip_name">装备名</string>
    <string name="reset">重置</string>
    <string name="ok">确认</string>
    <string name="pcrdfans">公主连结Re: Dive Fan Club</string>
    <string name="pvp_data">竞技场查询数据来源</string>
    <string name="leader_data">角色排行数据来源</string>
    <string name="zero">0</string>
    <string name="event_character">活动角色：</string>
    <string name="fragment">碎片</string>

    <!--  活动相关-->
    <string name="normal">普通关卡掉落量 x 倍</string>
    <string name="hard">困难关卡掉落量 x 倍</string>
    <string name="very_hard">非常困难关卡掉落量 x 倍</string>
    <string name="explore">探索掉落量 x 倍</string>
    <string name="shrine">圣迹调查掉落量 x 倍</string>
    <string name="temple">神殿调查掉落量 x 倍</string>
    <string name="dungeon">地下城玛那掉落量 x 倍</string>
    <string name="master_icon">大师币掉落量 x 倍</string>

    <!--  异常提示-->
    <string name="network_error">网络异常~</string>
    <string name="database_remote_backup">已启用远程备用数据~</string>
    <string name="backup_error">数据备份异常~</string>
    <string name="to_update"><![CDATA[去更新 > ]]></string>
</resources>
