<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:layout_gravity="bottom|end"
    android:orientation="vertical">

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:id="@+id/setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setting"
        app:icon="@drawable/ic_settings"
        app:iconSize="@dimen/l_icon" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:id="@+id/love"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tab_love"
        app:icon="@drawable/ic_love_hollow"
        app:iconSize="@dimen/l_icon" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search"
        app:icon="@drawable/ic_search"
        app:iconSize="@dimen/l_icon" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:id="@+id/filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filter"
        app:icon="@drawable/ic_filter"
        app:iconSize="@dimen/l_icon" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:id="@+id/sort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sort"
        app:icon="@drawable/ic_sort"
        app:iconSize="@dimen/l_icon" />
</LinearLayout>