<shortcuts xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:targetApi="25">
    <shortcut
        android:enabled="true"
        android:icon="@drawable/ic_pvp"
        android:shortcutId="open_tool_pvp"
        android:shortcutShortLabel="@string/tool_pvp">
        <intent
            android:action="tool://pvp"
            android:data="tool://pvp"
            android:targetClass="cn.wthee.pcrtool.MainActivity"
            android:targetPackage="cn.wthee.pcrtool" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>

    <shortcut
        android:enabled="true"
        android:icon="@drawable/ic_news"
        android:shortcutId="open_tool_news"
        android:shortcutShortLabel="@string/tool_news">
        <intent
            android:action="tool://news"
            android:data="tool://news"
            android:targetClass="cn.wthee.pcrtool.MainActivity"
            android:targetPackage="cn.wthee.pcrtool" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>

    <shortcut
        android:enabled="true"
        android:icon="@drawable/ic_calendar"
        android:shortcutId="open_tool_calendar"
        android:shortcutShortLabel="@string/tool_calendar">
        <intent
            android:action="tool://calendar"
            android:data="tool://calendar"
            android:targetClass="cn.wthee.pcrtool.MainActivity"
            android:targetPackage="cn.wthee.pcrtool" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>
</shortcuts>