<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/view_toolbar"
    android:layout_width="match_parent"
    android:layout_height="@dimen/toolbar_height"
    android:animateLayoutChanges="true"
    android:background="@color/colorPrimary"
    android:fitsSystemWindows="true">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/left_icon"
        android:layout_width="@dimen/l_icon"
        android:layout_height="@dimen/l_icon"
        android:layout_marginStart="@dimen/m_margin"
        android:adjustViewBounds="true"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/back"
        android:maxWidth="@dimen/l_icon"
        android:maxHeight="@dimen/m_icon"
        android:scaleType="fitCenter"
        android:src="@mipmap/ic_logo"
        android:theme="@style/Ripple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/m_margin"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:textColor="@color/colorWhite"
        android:textIsSelectable="true"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/left_icon"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/right_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/m_margin"
        android:adjustViewBounds="true"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/other"
        android:maxWidth="@dimen/l_icon"
        android:maxHeight="@dimen/m_icon"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_tool"
        android:theme="@style/Ripple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>